[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/resources/chess_black.tres" type="Texture" id=1]
[ext_resource path="res://assets/textures/gobang.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/chessboard.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/down.WAV" type="AudioStream" id=4]

[node name="chessboard" type="Sprite"]
texture = ExtResource( 2 )
centered = false
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="chessTip" type="Sprite" parent="."]
position = Vector2( 24.3767, 561.773 )
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 1.198
anchor_right = 1.0
anchor_bottom = 1.198
margin_left = 4.0
margin_top = -0.524048
margin_right = 4.0
margin_bottom = 311.476
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer"]
margin_left = 240.0
margin_top = 146.0
margin_right = 297.0
margin_bottom = 166.0
text = "Restart"

[node name="chessSample" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_Button_pressed"]
